[fix] adjust image alignment in desktop view

--- a/portfolio-moraru/src/index.css
+++ b/portfolio-moraru/src/index.css
@@ -585,8 +585,8 @@ section {
 @media (min-width: 992px){
   .img-col .stefan-img{
     margin-left: auto;
-    margin-right: 0;
-    transform: translateX(10px);
+    margin-right: auto;
+    transform: translateX(0);
   }
 }
 
